--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>voice_recognize</title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.png" />
+    <title>实时语音-智能化工具平台</title>
   </head>
   <body>
     <noscript>
@@ -18,6 +18,9 @@
     * {
       padding: 0;
       margin: 0;
+    }
+    body {
+      background-color:#EDF0F1;
     }
   </style>
 </html>
